package org.jcjxb.wsn.service;

option java_package = "org.jcjxb.wsn.service.proto";
option java_outer_classname = "SlaveService";
option java_generic_services = true;

import "BasicDataType.proto";
import "WSNConfig.proto";

message ExecRequest {
	optional int64 globalVirtualTime = 1;
}

service SService {
	rpc startSimulation(SimulationConfig) returns (Empty);
	rpc exec(ExecRequest) returns (Empty);
}
